--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,10 @@
 
 .flex-container{
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+  flex-direction: column;
+  border: 1px solid black;
+  
 }
+
